@@ -329,7 +329,7 @@ limitations under the License.
                         <div class="d-flex mb-3 align-items-start">
                             <img src="img/download/information-circle-outline.svg" class="img-fluid me-2 pt-1" alt="img">
                             <div>
-                                Gremlin Console and Gremlin Server are compatible with Java 8/11.
+                                Gremlin Console and Gremlin Server are compatible with Java 11/17.
                             </div>
                         </div>
                         <div class="d-flex mb-3 align-items-start">
