@@ -30,6 +30,10 @@ complete list of all the modifications that are part of this release.
 
 === Upgrading for Users
 
+==== Set minimum Java version to 11
+
+TinkerPop 3.8 requires a minimum of Java 11 for building and running. Support for Java 1.8 has been dropped.
+
 ==== Auto-promotion of Numbers
 
 Previously, operations like `sum` or `sack` that involved mathematical calculations did not automatically promote the
@@ -395,6 +399,10 @@ link:https://issues.apache.org/jira/browse/TINKERPOP-2974[TINKERPOP-2974]
 === Upgrading for Providers
 
 ==== Graph System Providers
+
+==== Set minimum Java version to 11
+
+TinkerPop 3.8 requires a minimum of Java 11 for building and running. Support for Java 1.8 has been dropped.
 
 ===== Test Suite Changes
 
