@@ -183,7 +183,7 @@ limitations under the License.
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <skipIntegrationTests>true</skipIntegrationTests>
-        <suresafeArgs> </suresafeArgs>
+        <suresafeArgs>--illegal-access=permit</suresafeArgs>
 
         <!--
         This file will come from the root of each modules test/resources/ directories. logback-silent.xml will
@@ -246,7 +246,7 @@ limitations under the License.
                             <rules>
                                 <DependencyConvergence/>
                                 <requireJavaVersion>
-                                    <version>[1.8,18)</version>
+                                    <version>[11,18)</version>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
                                     <version>[3.5.3,)</version>
@@ -586,15 +586,14 @@ limitations under the License.
                         <basedir>${basedir}</basedir>
                     </configuration>
                 </plugin>
-                <!-- there is a jdk11 profile that will be enabled if built with that version - these settings will be overriden -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.14.0</version>
                     <configuration>
-                        <release>8</release>
-                        <source>8</source>
-                        <target>8</target>
+                        <release>11</release>
+                        <source>11</source>
+                        <target>11</target>
                         <compilerArgs>
                             <arg>-parameters</arg>
                         </compilerArgs>
@@ -699,7 +698,7 @@ limitations under the License.
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>${javadoc-plugin.version}</version>
                     <configuration>
-                        <source>1.8</source>
+                        <source>11</source>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -707,7 +706,7 @@ limitations under the License.
                     <artifactId>gmavenplus-plugin</artifactId>
                     <version>2.1.0</version>
                     <configuration>
-                        <targetBytecode>1.8</targetBytecode>
+                        <targetBytecode>11</targetBytecode>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -758,13 +757,6 @@ limitations under the License.
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-configuration2</artifactId>
                 <version>${commons.configuration.version}</version>
-                <exclusions>
-                    <!-- still on 1.8 and we need 1.9 -->
-                    <exclusion>
-                        <groupId>org.apache.commons</groupId>
-                        <artifactId>commons-text</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -930,16 +922,6 @@ limitations under the License.
     </dependencyManagement>
 
     <profiles>
-        <profile>
-            <id>jdk11</id>
-            <activation>
-                <jdk>[11,18)</jdk>
-            </activation>
-            <properties>
-                <suresafeArgs>--illegal-access=permit</suresafeArgs>
-            </properties>
-        </profile>
-
         <profile>
             <id>asciidoc</id>
             <activation>
